chore: initial release v0.1.0
- Initial release of NoBrainDev
- Code snippet management with CRUD operations
- AI semantic search with all-MiniLM-L6-v2
- SQLite local storage
- Modern UI with React, Tailwind CSS, and shadcn/ui
- Cross-platform support (Windows, macOS, Linux)

See CHANGELOG.md for details.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "snippet-vault"
 version = "0.1.0"
-description = "A local code snippet manager with AI-powered semantic search"
-authors = ["you"]
-license = ""
-repository = ""
+description = "NoBrainDev - AI-powered code snippet manager with semantic search"
+authors = ["TechBruwh"]
+license = "MIT"
+repository = "https://github.com/techbruwh/nobraindev"
 edition = "2021"
 
 [build-dependencies]
