--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-quill-new": "^3.6.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
