--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
           - os: ubuntu-latest
             rust_target: x86_64-unknown-linux-gnu
           - os: macos-latest
+            rust_target: x86_64-apple-darwin
+          - os: macos-latest
             rust_target: aarch64-apple-darwin
           - os: windows-latest
             rust_target: x86_64-pc-windows-msvc
