--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nobraindev"
-version = "0.2.2"
+version = "0.2.3"
 description = "NoBrainDev - AI-powered code snippet manager with semantic search"
 authors = ["TechBruwh"]
 license = "MIT"
@@ -25,7 +25,7 @@ llm = "0.1"
 dirs = "5.0"
 reqwest = { version = "0.12", features = ["json", "stream"] }
 futures-util = "0.3"
-ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
+ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }
 tokenizers = "0.20"
 ndarray = "0.16"
 
