--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nobraindev"
-version = "0.2.8"
+version = "1.0.0"
 description = "NoBrainDev - AI-powered code snippet manager with semantic search"
 authors = ["TechBruwh"]
 license = "MIT"
@@ -28,6 +28,7 @@ futures-util = "0.3"
 ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }
 tokenizers = "0.20"
 ndarray = "0.16"
+keyring = "3.6.3"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
