--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.59.3",
+    "@supabase/supabase-js": "^2.90.1",
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-dialog": "^2.4.0",
     "class-variance-authority": "^0.7.1",
