--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,7 +20,7 @@ serde_json = "1.0"
 rusqlite = { version = "0.31", features = ["bundled"] }
 chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1.0"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
 llm = "0.1"
 dirs = "5.0"
 reqwest = { version = "0.12", features = ["json", "stream"] }
@@ -37,6 +37,10 @@ custom-protocol = ["tauri/custom-protocol"]
 panic = "abort"
 codegen-units = 1
 lto = true
-opt-level = "s"
+opt-level = "z"  # Optimize for size (smaller = less memory)
 strip = true
+incremental = false
+
+[profile.dev]
+opt-level = 1  # Faster dev builds with some optimization
 
