fix: release pipeline to specify production mode

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Build frontend
         run: |
           cd ui
-          npm run build
+          npm run build -- --mode production
 
       # macOS Code Signing Setup
       - name: Import Apple Code Signing Certificate
