--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@tauri-apps/plugin-dialog": "^2.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
