--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,9 +1,6 @@
-# Clerk Authentication
-VITE_CLERK_PUBLISHABLE_KEY=your-clerk-publishable-key
+# Supabase Configuration
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# Supabase Database (for sync only)
-VITE_SUPABASE_URL=https://your-project-id.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key-here
-
-# Environment
+# App Environment
 VITE_APP_ENV=development
