--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ tauri = { version = "2.0", features = [] }
 tauri-plugin-dialog = "2.0"
 tauri-plugin-fs = "2.0"
 tauri-plugin-shell = "2.0"
+tauri-plugin-global-shortcut = "2.0"
 arboard = "3.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
