--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,8 @@
     "@supabase/supabase-js": "^2.90.1",
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-dialog": "^2.4.0",
+    "@tauri-apps/plugin-process": "^2.3.1",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "@tiptap/extension-code-block-lowlight": "^3.15.3",
     "@tiptap/extension-color": "^3.15.3",
     "@tiptap/extension-highlight": "^3.15.3",
